[Employee] add employee controller
