# tsoa/swagger.json
@@ -452,66 +452,39 @@
 						"description": "Ok",
 						"content": {
 							"application/json": {
-								"schema": {}
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
 							}
 						}
 					}
 				},
 				"tags": [
-					"Customer"
+					"Pegawai"
 				],
-				"security": [
-					{
-						"api_key": [
-							"delete:customer"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/api/customer/search/{query}": {
-			"get": {
-				"operationId": "SearchCustomer",
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateEmployee",
 				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {}
-							}
-						}
+					"204": {
+						"description": "No content"
 					}
 				},
 				"tags": [
-					"Customer"
+					"Pegawai"
 				],
-				"security": [
-					{
-						"api_key": [
-							"read:customer"
-						]
-					}
-				],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "query",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
+				"security": [],
+				"parameters": []
 			}
 		},
 		"/api/products": {
